--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0",
+      "bluebird": "npm:bluebird@^3.4.6",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "dompurify": "npm:dompurify@^0.7.4",
       "fetch": "github:github/fetch@^0.11.0",
+      "jquery": "npm:jquery@^3.1.1",
       "moment": "npm:moment@^2.12.0",
       "numeral": "npm:numeral@^1.5.3",
       "prism": "github:PrismJS/prism@^1.4.1",
@@ -79,8 +81,6 @@
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
     }
   },
